# highwayhash

./: CMakeLists.txt
highwayhash/: scalar_sip_tree_hash.cc
